--- a/themes/worldhouse/src/front-page/style.css
+++ b/themes/worldhouse/src/front-page/style.css
@@ -1,33 +1,77 @@
-#tile-bg {
-  position: fixed;
-  inset: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-  pointer-events: none; /* keeps your site clickable */
+/* outfit-200 - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 200;
+  src: url('../../assets/fonts/outfit-v15-latin-200.woff2') format('woff2');
+}
+/* outfit-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../assets/fonts/outfit-v15-latin-regular.woff2') format('woff2');
+}
+/* outfit-600 - latin */
+@font-face {
+  font-display: swap; 
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../../assets/fonts/outfit-v15-latin-600.woff2') format('woff2');
+}
+/* outfit-800 - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 800;
+  src: url('../../assets/fonts/outfit-v15-latin-800.woff2') format('woff2');
 }
 
-.wh-main {
-  position: relative;
-  z-index: 1;
+.wh-background-animation {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+.wh-content {
   width: 100%;
   height: 100%;
   min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  & h1 {
+    font-family: 'Outfit', sans-serif;
+    font-size: 6rem;
+    font-weight: 900;
+    color: #cf28de;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+}
+
+.wh-content-center {
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  max-width: 1200px;
 }
 
 .wh-logo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  max-width: 1000px;
-  max-height: 1000px;
-
   & svg {
     width: 200px;
     height: 100%;
-    filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5));
   }
 }
